# NSU_LABS

./: .gitmodules  LICENSE  README.md
FIRST_GRADE/FIRST_SEMESTR/Boyer_Moore_algorithm/: CMakeLists.txt  main.c
FIRST_GRADE/FIRST_SEMESTR/Calculator/: CMakeLists.txt  main.c  stack.h
FIRST_GRADE/FIRST_SEMESTR/Dijkstra_algorithm/: CMakeLists.txt  main.c
FIRST_GRADE/FIRST_SEMESTR/Functions-Recursions-Dynamic-arrays/: 1  10  11  12  13  14  15  2  3  4  5  6  7  8  9
FIRST_GRADE/FIRST_SEMESTR/Number_systems/: CMakeLists.txt  in.txt  main.c
FIRST_GRADE/FIRST_SEMESTR/Quicksort/: CMakeLists.txt  main.c
FIRST_GRADE/FIRST_SEMESTR/Strings/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  LICENSE  tools.h
FIRST_GRADE/SECOND_SEMESTR/avl_tree/: CMakeLists.txt  avl_tree.h  main.c
FIRST_GRADE/SECOND_SEMESTR/dijkstra_graph/: CMakeLists.txt  graph.h  main.c
FIRST_GRADE/SECOND_SEMESTR/huffman_code/: CMakeLists.txt  in.txt  main.c
FIRST_GRADE/SECOND_SEMESTR/kosoraju_graph_algorithm/: CMakeLists.txt  graph.c  graph.h  kosoraju.c  kosoraju.h  main.c  stack.c  stack.h
FIRST_GRADE/SECOND_SEMESTR/kruskal_graph_algorithm/: CMakeLists.txt  main.c
FIRST_GRADE/SECOND_SEMESTR/prim_graph_algorithm/: CMakeLists.txt  graph.h  main.c
FIRST_GRADE/SECOND_SEMESTR/topological_sort/: CMakeLists.txt  main.c
SECOND_GRADE/FIRST_SEMESTER/: init.txt
SECOND_GRADE/FIRST_SEMESTER/lab0/: CMakeLists.txt  main  main.cpp
SECOND_GRADE/FIRST_SEMESTER/lab0/lab_0a/: CMakeLists.txt  main.cpp  module1.cpp  module1.h  module2.cpp  module2.h  module3.cpp  module3.h
SECOND_GRADE/FIRST_SEMESTER/lab0/lab_0b/: CMakeLists.txt  csv_writer.cpp  csv_writer.h  input.txt  main.cpp  output.csv  word_data.cpp  word_data.h
SECOND_GRADE/FIRST_SEMESTER/lab_1a/: CMakeLists.txt  bit_array.cpp  bit_array.h  bit_array_iterator.cpp  bit_array_iterator.h  bit_array_test.cpp  main.cpp
SECOND_GRADE/FIRST_SEMESTER/lab_2b/: CMakeLists.txt  cell.cpp  cell.h  console_parser.cpp  console_parser.h  file_manager.cpp  file_manager.h  game.cpp  game.h  game_test.cpp  main.cpp
SECOND_GRADE/FIRST_SEMESTER/lab_3/: CMakeLists.txt  WAV_file.cpp  WAV_file.h  app_tests.cpp  audio_converters.cpp  audio_converters.h  exceptions.h  input_parser.cpp  input_parser.h  main.cpp  sound_processor.cpp  sound_processor.h  tick.h
SECOND_GRADE/FIRST_SEMESTER/lab_4/: CMakeLists.txt  CSV_exceptions.h  CSV_parser.cpp  CSV_parser.h  main.cpp  parser_config.h  tests.cpp  tuple_printer.h
SECOND_GRADE/SECOND_SEMESTER/: pom.xml
SECOND_GRADE/SECOND_SEMESTER/lab_1/: README.md  pom.xml
SECOND_GRADE/SECOND_SEMESTER/lab_1/src/: Main.java
SECOND_GRADE/SECOND_SEMESTER/lab_2/: README.md  dependency-reduced-pom.xml  pom.xml
SECOND_GRADE/SECOND_SEMESTER/lab_3/: README.md  pom.xml
SECOND_GRADE/SECOND_SEMESTER/lab_4/: pom.xml
SECOND_GRADE/SECOND_SEMESTER/lab_5/: pom.xml
THIRD_GRADE/FIRST_SEMESTER/Networks/lab_1/: main.py
THIRD_GRADE/FIRST_SEMESTER/Networks/lab_2/: client.py  protocol.py  server.py
THIRD_GRADE/FIRST_SEMESTER/Networks/lab_3/: gui.py  loop_runner.py  main.py
THIRD_GRADE/FIRST_SEMESTER/Networks/lab_4/: main.py
THIRD_GRADE/FIRST_SEMESTER/Networks/lab_5/: State.py  config.py  dns_resolver.py  main.py  proxy.py  socks5.py
(+122 files in other folders)
